alignment corrections

--- a/main.css
+++ b/main.css
@@ -2,8 +2,7 @@ body {
 	font-family: Arial;
 }
 nav {
-	width: 100%
-	height: 200px;
+	width: 100%;
 	background-color: grey;
 }
 nav h1 {
@@ -34,6 +33,7 @@ body div {
 #search img{
 	height: 30px;
 	border: solid 1px;
+	vertical-align: bottom;
 }
 #pages {
 	padding-bottom: 80px;
